--- a/static/css/base.css
+++ b/static/css/base.css
@@ -904,4 +904,33 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .ac_content .typeContent .formTab .jz_sysItem .title { font-size: 20px; line-height: 30px; }
 
+/*选择做页头广告的产品*/
+.productTable { clear: both; overflow: hidden; }
+
+.productTable .pt_stateBox { clear: both; overflow: hidden; text-align: center; }
+
+.productTable .pt_stateBox label { float: none; display: inline-block; margin: 0px 20px; border: none; height: 40px; line-height: 40px; font-size: 14px; }
+
+.productTable .pt_stateBox label .red { background-color: #f00; padding-right: 10px; color: #fff; }
+
+.productTable .pt_stateBox label .blue { background-color: #1c82bc; padding-right: 10px; color: #fff; }
+
+.productTable .productTableList { width: 100%; border: 1px solid #eee; border-collapse: collapse; }
+
+.productTable .productTableList tr:nth-child(2n-1) { background-color: #f8f8f8; }
+
+.productTable .productTableList th { height: 40px; line-height: 40px; border: 1px solid #eee; font-size: 16px; background-color: #72b1e4; color: #fff; }
+
+.productTable .productTableList th:first-child { width: 50px; }
+
+.productTable .productTableList td { border: 1px solid #eee; font-size: 14px; height: 30px; text-align: center; }
+
+.productTable .productTableList td:first-child { background-color: #f8f8f8; }
+
+.productTable .price_tip { border: 1px solid #f60; margin: 30px 0px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 10px; font-size: 20px; color: #999; line-height: 2; }
+
+.productTable .price_tip em { font-style: normal; margin: 0 20px; color: #f60; }
+
+.productTable .price_tip .text-right { text-align: right; }
+
 /*管理端界面 end*/
