--- a/static/sass/_admin.scss
+++ b/static/sass/_admin.scss
@@ -730,3 +730,82 @@
         }
     }
 }
+/*选择做页头广告的产品*/
+.productTable{
+    clear: both;
+    overflow: hidden;
+    //padding-right: 10px;
+    .pt_stateBox{
+        clear: both;
+        overflow: hidden;
+        text-align: center;
+        label{
+            float: none;
+            display: inline-block;
+            margin: 0px 20px;
+            border: none;
+            height: 40px;
+            line-height: 40px;
+            font-size: 14px;
+            .red{
+                background-color: #f00;
+                padding-right: 10px;
+                color: #fff;
+            }
+            .blue{
+                background-color: #1c82bc;
+                padding-right: 10px;
+                color: #fff;
+            }
+        }
+    }
+    .productTableList{
+        width: 100%;
+        border: 1px solid #eee;
+        border-collapse: collapse;
+        tr:nth-child(2n-1){
+            background-color: #f8f8f8;
+        }
+        th{
+            height: 40px;
+            line-height: 40px;
+            border: 1px solid #eee;
+            font-size: 16px;
+            background-color: $baseColor;
+            color: #fff;
+            &:first-child{
+                width: 50px;
+            }
+            //&:last-child{
+            //    width: 120px;
+            //}
+        }
+        td{
+            border: 1px solid #eee;
+            font-size: 14px;
+            height: 30px;
+            text-align: center;
+            &:first-child{
+                background-color: #f8f8f8;
+            }
+        }
+    }
+    .price_tip{
+        border: 1px solid $orange;
+        margin: 30px 0px;
+        box-sizing: border-box;
+        padding: 10px;
+        font-size: 20px;
+        color: #999;
+        line-height: 2;
+        em{
+            font-style: normal;
+            margin: 0 20px;
+            color: $orange;
+        }
+        .text-right{
+            text-align: right;
+        }
+    }
+
+}
