--- a/view/管理端_广告位.顶部两层.step-2.html
+++ b/view/管理端_广告位.顶部两层.step-2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>管理端 卖家建站</title>
+    <title>管理端 广告位 顶部两层 step-1</title>
     <link rel="stylesheet" href="../static/images/common/icon/iconfont.css">
     <link rel="stylesheet" href="../static/css/base.css">
 </head>
@@ -173,7 +173,7 @@
 
         </div>
         <div class="a_content">
-            <div class="ac_top">选择做页头广告的产品（第三层）</div>
+            <div class="ac_top">选择大类或标准选择下面的广告位</div>
             <div class="ac_content clearAll">
                 <!-- 内容区域 start -->
                 <div class="productTable">
@@ -188,96 +188,121 @@
                             <span class="red"><input type="checkbox" disabled checked>23</span><span>没有位置了</span>
                         </label>
                     </div>
-                    <!-- product table start -->
-                    <table class="productTableList">
+                    <!--选择大类或标准选择下面的广告位-->
+                    <table class="ct_firstTable">
                         <tr>
-                            <th>序号</th>
-                            <th>规格</th>
-                            <th>到期时间</th>
-                            <th>勾选做页头广告</th>
+                            <th>大类</th>
+                            <th>小类</th>
                         </tr>
                         <tr>
-                            <td>1</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
+                            <td class="bigLei">
+                                螺<br>栓
+                                <span><input type="checkbox">租用</span>
+                            </td>
                             <td>
-                                <input type="checkbox">
+                                <table class="childTable">
+                                    <tr>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <tr>
-                            <td>2</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
+                            <td class="bigLei">
+                                螺<br>栓
+                                <span><input type="checkbox">租用</span>
+                            </td>
                             <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td class="blue">
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td class="red">
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>9</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>10</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
+                                <table class="childTable">
+                                    <tr>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td>
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td class="blue">
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                        <td class="red">
+                                            <img src="../static/images/index/lei_1.png" alt="">
+                                            <p><input type="checkbox">螺栓-1</p>
+                                        </td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                     </table>
-                    <!-- product table end -->
                     <div class="pt_stateBox">
                         <label>
                             <input type="checkbox" disabled><span>可以购买</span>
@@ -292,9 +317,9 @@
                 </div>
                 <!--三个居中的按钮 start-->
                 <div class="btnBox clearAll">
-                    <input type="submit" class="btn normal" value="选好了，去付费">
-                    <input type="submit" class="btn normal" value="我要促销">
-                    <input type="submit" class="btn normal" value="我要免费送样">
+                    <input type="submit" class="btn normal" value="立刻付款">
+                    <input type="submit" class="btn normal" value="继续选其他位置">
+                    <input type="submit" class="btn normal" value="继续选其他位置">
                 </div>
                 <!--三个居中的按钮 end-->
                 <!-- 内容区域 end -->
