--- a/view/管理端_广告位.顶部两层.step-1.html
+++ b/view/管理端_广告位.顶部两层.step-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>管理端 卖家建站</title>
+    <title>管理端 广告位 顶部两层 step-1</title>
     <link rel="stylesheet" href="../static/images/common/icon/iconfont.css">
     <link rel="stylesheet" href="../static/css/base.css">
 </head>
@@ -173,128 +173,87 @@
 
         </div>
         <div class="a_content">
-            <div class="ac_top">选择做页头广告的产品（第三层）</div>
+            <div class="ac_top">选择零件大类（共4步）</div>
             <div class="ac_content clearAll">
                 <!-- 内容区域 start -->
-                <div class="productTable">
-                    <div class="pt_stateBox">
-                        <label>
-                            <input type="checkbox" disabled><span>可以购买</span>
-                        </label>
-                        <label>
-                            <span class="blue"><input type="checkbox" disabled checked>20</span><span>已经购买了</span>
-                        </label>
-                        <label>
-                            <span class="red"><input type="checkbox" disabled checked>23</span><span>没有位置了</span>
-                        </label>
-                    </div>
-                    <!-- product table start -->
-                    <table class="productTableList">
-                        <tr>
-                            <th>序号</th>
-                            <th>规格</th>
-                            <th>到期时间</th>
-                            <th>勾选做页头广告</th>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td class="blue">
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td class="red">
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>9</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>10</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                    </table>
-                    <!-- product table end -->
-                    <div class="pt_stateBox">
-                        <label>
-                            <input type="checkbox" disabled><span>可以购买</span>
-                        </label>
-                        <label>
-                            <span class="blue"><input type="checkbox" disabled checked>20</span><span>已经购买了</span>
-                        </label>
-                        <label>
-                            <span class="red"><input type="checkbox" disabled checked>23</span><span>没有位置了</span>
-                        </label>
-                    </div>
+                <div class="cc_chooseClass">
+                    <!-- 图片的尺寸比例还是2：1和首页相同 -->
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_1.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">螺栓</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_2.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">螺钉</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_3.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">螺帽</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_4.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">柳钉</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_1.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">螺栓</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_2.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">螺钉</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_3.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">螺帽</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_4.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">柳钉</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_1.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">螺栓</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_2.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">螺钉</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_3.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">螺帽</p>
+                    </label>
+                    <label class="c_item">
+                        <div class="imgBox">
+                            <img src="../static/images/index/lei_4.png" alt="">
+                        </div>
+                        <p class="name"><input type="checkbox">柳钉</p>
+                    </label>
                 </div>
                 <!--三个居中的按钮 start-->
                 <div class="btnBox clearAll">
-                    <input type="submit" class="btn normal" value="选好了，去付费">
-                    <input type="submit" class="btn normal" value="我要促销">
-                    <input type="submit" class="btn normal" value="我要免费送样">
+                    <input type="submit" class="btn normal" value="继续下一步（还有三步）">
                 </div>
                 <!--三个居中的按钮 end-->
                 <!-- 内容区域 end -->
