--- a/view/管理端_询价.回复.html
+++ b/view/管理端_询价.回复.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>管理端 卖家建站</title>
+    <title>管理端 询价 回复</title>
     <link rel="stylesheet" href="../static/images/common/icon/iconfont.css">
     <link rel="stylesheet" href="../static/css/base.css">
 </head>
@@ -173,132 +173,53 @@
 
         </div>
         <div class="a_content">
-            <div class="ac_top">选择做页头广告的产品（第三层）</div>
-            <div class="ac_content clearAll">
-                <!-- 内容区域 start -->
-                <div class="productTable">
-                    <div class="pt_stateBox">
-                        <label>
-                            <input type="checkbox" disabled><span>可以购买</span>
-                        </label>
-                        <label>
-                            <span class="blue"><input type="checkbox" disabled checked>20</span><span>已经购买了</span>
-                        </label>
-                        <label>
-                            <span class="red"><input type="checkbox" disabled checked>23</span><span>没有位置了</span>
-                        </label>
+            <div class="ac_top">回复买家信息</div>
+            <div class="a_container">
+                <form action="">
+                    <div class="leftRightBox">
+                        <div class="left">
+                            <div class="a_comInfo">
+                                <span>公司名称：</span><input type="text">
+                            </div>
+                            <div class="a_comInfo">
+                                <span>地址：</span><input type="text">
+                            </div>
+                            <div class="a_comInfo">
+                                <span>入驻时间：</span><input type="text">
+                            </div>
+                            <div class="a_comInfo">
+                                <span>产品数：</span><input type="text">
+                            </div>
+                            <div class="a_comInfo">
+                                <span>产品号：</span><input type="text">
+                            </div>
+                            <div class="a_comInfo">
+                                <span>产品说明：</span><textarea></textarea>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <div class="a_pImg">
+                                <img src="../static/images/examples/hah.jpg" alt="">
+                            </div>
+                            <p class="imgName">134-00000-719</p>
+                        </div>
                     </div>
-                    <!-- product table start -->
-                    <table class="productTableList">
-                        <tr>
-                            <th>序号</th>
-                            <th>规格</th>
-                            <th>到期时间</th>
-                            <th>勾选做页头广告</th>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td class="blue">
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td class="red">
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>9</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>10</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                    </table>
-                    <!-- product table end -->
-                    <div class="pt_stateBox">
-                        <label>
-                            <input type="checkbox" disabled><span>可以购买</span>
-                        </label>
-                        <label>
-                            <span class="blue"><input type="checkbox" disabled checked>20</span><span>已经购买了</span>
-                        </label>
-                        <label>
-                            <span class="red"><input type="checkbox" disabled checked>23</span><span>没有位置了</span>
-                        </label>
+                    <hr>
+                    <div class="a_comInfo">
+                        <span>询价内容</span>
+                        <textarea></textarea>
                     </div>
-                </div>
-                <!--三个居中的按钮 start-->
-                <div class="btnBox clearAll">
-                    <input type="submit" class="btn normal" value="选好了，去付费">
-                    <input type="submit" class="btn normal" value="我要促销">
-                    <input type="submit" class="btn normal" value="我要免费送样">
-                </div>
-                <!--三个居中的按钮 end-->
-                <!-- 内容区域 end -->
-
+                    <hr>
+                    <div class="a_comInfo">
+                        <span>回复内容</span>
+                        <textarea></textarea>
+                    </div>
+                    <!--三个居中的按钮 start-->
+                    <div class="btnBox clearAll">
+                        <input type="submit" class="btn normal" value="提交">
+                    </div>
+                    <!--三个居中的按钮 end-->
+                </form>
             </div>
             <div class="a_footer">
                 <p>江苏省    无锡市    滨湖区    国家工业设计院   214000</p>
