--- a/view/管理端_页头广告.html
+++ b/view/管理端_页头广告.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>管理端 卖家建站</title>
+    <title>管理端 页头广告</title>
     <link rel="stylesheet" href="../static/images/common/icon/iconfont.css">
     <link rel="stylesheet" href="../static/css/base.css">
 </head>
@@ -173,132 +173,47 @@
 
         </div>
         <div class="a_content">
-            <div class="ac_top">选择做页头广告的产品（第三层）</div>
-            <div class="ac_content clearAll">
-                <!-- 内容区域 start -->
-                <div class="productTable">
-                    <div class="pt_stateBox">
-                        <label>
-                            <input type="checkbox" disabled><span>可以购买</span>
-                        </label>
-                        <label>
-                            <span class="blue"><input type="checkbox" disabled checked>20</span><span>已经购买了</span>
-                        </label>
-                        <label>
-                            <span class="red"><input type="checkbox" disabled checked>23</span><span>没有位置了</span>
-                        </label>
+            <div class="a_container">
+                <div class="a_advShow">
+                    <p>系统中提供3个层次的页头广告，所有需要此广告位的卖家最好提供自己设计好的图片以便更好的推广自己，从而物有所值；
+                    <p>此三层广告相互不影响，卖家可以交叉购买，系统保证每一个层次上，那层独立的页面上卖家广告不会重复出现！</p>
+                </div>
+                <div class="a_advItem">
+                    <div class="ImgShow">
+                        <img src="../static/images/examples/adv1.jpg" alt="">
                     </div>
-                    <!-- product table start -->
-                    <table class="productTableList">
-                        <tr>
-                            <th>序号</th>
-                            <th>规格</th>
-                            <th>到期时间</th>
-                            <th>勾选做页头广告</th>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td class="blue">
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td class="red">
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>9</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>10</td>
-                            <td>DIN933 M1.6X2</td>
-                            <td>2018年6月21日</td>
-                            <td>
-                                <input type="checkbox">
-                            </td>
-                        </tr>
-                    </table>
-                    <!-- product table end -->
-                    <div class="pt_stateBox">
-                        <label>
-                            <input type="checkbox" disabled><span>可以购买</span>
-                        </label>
-                        <label>
-                            <span class="blue"><input type="checkbox" disabled checked>20</span><span>已经购买了</span>
-                        </label>
-                        <label>
-                            <span class="red"><input type="checkbox" disabled checked>23</span><span>没有位置了</span>
-                        </label>
+                    <div class="advText">
+                        <p class="title">第一层：</p>
+                        <p class="info">规则：卖家可以根据自己的经营范围任意购买'螺栓'，'螺帽'，或'接头'等具体大类的页头广告；但是在螺栓这个大类下，同一个卖家最多只能有一个广告位。</p>
+                        <div class="btnBox">
+                            <input type="button" class="btn default" value="立即购买">
+                        </div>
                     </div>
                 </div>
-                <!--三个居中的按钮 start-->
-                <div class="btnBox clearAll">
-                    <input type="submit" class="btn normal" value="选好了，去付费">
-                    <input type="submit" class="btn normal" value="我要促销">
-                    <input type="submit" class="btn normal" value="我要免费送样">
+                <div class="a_advItem">
+                    <div class="ImgShow">
+                        <img src="../static/images/examples/adv2.jpg" alt="">
+                    </div>
+                    <div class="advText">
+                        <p class="title">第二层：（标准和产品族）</p>
+                        <p class="info">规则：卖家可以根据自己的经营范围任意购买'螺栓'，'螺帽'，或'接头'等具体大类的页头广告；但是在螺栓这个大类下，同一个卖家最多只能有一个广告位。</p>
+                        <div class="btnBox">
+                            <input type="button" class="btn default" value="立即购买">
+                        </div>
+                    </div>
                 </div>
-                <!--三个居中的按钮 end-->
-                <!-- 内容区域 end -->
-
+                <div class="a_advItem">
+                    <div class="ImgShow">
+                        <img src="../static/images/examples/adv3.jpg" alt="">
+                    </div>
+                    <div class="advText">
+                        <p class="title">第三层：（具体产品和卖家）</p>
+                        <p class="info">规则：卖家可以根据自己的经营范围任意购买'螺栓'，'螺帽'，或'接头'等具体大类的页头广告；但是在螺栓这个大类下，同一个卖家最多只能有一个广告位。</p>
+                        <div class="btnBox">
+                            <input type="button" class="btn default" value="立即购买">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="a_footer">
                 <p>江苏省    无锡市    滨湖区    国家工业设计院   214000</p>
