--- a/static/sass/_seller.scss
+++ b/static/sass/_seller.scss
@@ -453,3 +453,206 @@ $orange:#f60;
     line-height: 40px;
   }
 }
+.customerAddInfo{
+  clear: both;
+  overflow: hidden;
+  .flag{
+    line-height: 2;
+    font-size: 26px;
+    color: $baseColor;
+    text-align: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid $baseColor;
+  }
+  .tips{
+    padding: 10px;
+    border: 1px solid $orange;
+    margin: 20px 0px;
+    color: $orange;
+    font-size: 18px;
+    line-height: 2;
+  }
+  .st_item{
+    padding-left: 100px;
+    line-height: 40px;
+    margin-bottom: 10px;
+    span{
+      font-size: 16px;
+      vertical-align: top;
+      display: inline-block;
+      width: 90px;
+    }
+    input{
+      border: 1px solid #eee;
+      height: 30px;
+      padding: 0px 10px;
+      width: 450px;
+    }
+    textarea{
+      border: 1px solid #eee;
+      padding: 10px;
+      resize: none;
+      width: 450px;
+      height: 200px;
+    }
+  }
+}
+.brandList{
+  width: 760px;
+  padding-right: 10px;
+  float: left;
+  .brandItem{
+    border: 1px solid #eee;
+    padding: 10px;
+    clear: both;
+    overflow: hidden;
+    margin-bottom: 10px;
+    position: relative;
+    padding-bottom: 40px;
+    .textInfo{
+      float: left;
+      width: 300px;
+      font-size: 12px;
+      .name{
+        font-size: 16px;
+        line-height: 2;
+      }
+      .item{
+        clear: both;
+        overflow: hidden;
+        color: #999;
+        line-height: 1.5;
+        .textfag{
+          float: left;
+          width: 90px;
+        }
+        .textoo{
+          float: left;
+          width: 210px;
+        }
+      }
+    }
+    .imgBox{
+      float: left;
+      width: 190px;
+      margin-left: 10px;
+      overflow: hidden;
+      img{
+        width: 190px;
+      }
+    }
+    .tools{
+      width: 40px;
+      position: absolute;
+      right: 0px;
+      height: 100%;
+      border: 1px solid #eee;
+      margin: -1px;
+      top:0px;
+      text-align: center;
+      .tool{
+        width: 30px;
+        display: inline-block;
+        font-size: 15px;
+        background-color: $baseColor;
+        color: #fff;
+        text-align: center;
+        margin: 5px 0px;
+        padding: 3px 1px;
+        &:hover{
+          background-color: $orange;
+        }
+      }
+    }
+    .brandTabs{
+      clear: both;
+      overflow: hidden;
+      display: table;
+      width: 760px;
+      position: absolute;
+      z-index: 2;
+      bottom: 0px;
+      left: 0px;
+      span{
+        display: table-cell;
+        text-align: center;
+        height: 40px;
+        line-height: 40px;
+        background-color: #f8f8f8;
+        font-size: 14px;
+        color: $baseColor;
+        em{
+          font-style: normal;
+          color: #666;
+        }
+      }
+    }
+  }
+}
+.newBrands{
+  float: right;
+  width: 200px;
+  border: 1px solid #eee;
+  .title{
+    height: 40px;
+    line-height: 40px;
+    background-color: $baseColor;
+    color: #fff;
+    clear: both;
+    overflow: hidden;
+    font-size: 16px;
+    span{
+      width: 80%;
+      display: block;
+      float: left;
+      text-align: center;
+    }
+    em{
+      width: 20%;
+      display: block;
+      float: left;
+      text-align: center;
+      background-color: $orange;
+      font-style: normal;
+    }
+  }
+  .smBrandList{
+    clear: both;
+    li{
+      clear: both;
+      overflow: hidden;
+      font-size: 14px;
+      height: 30px;
+      line-height: 30px;
+      a{
+        float: left;
+        width: 80%;
+        color: #999;
+        &:hover{
+          color: $baseColor;
+        }
+        em{
+          font-size: 12px;
+          display: inline-block;
+          width: 24px;
+          height: 24px;
+          line-height: 24px;
+          text-align: center;
+          font-style: normal;
+          color: #fff;
+          background-color: #888888;
+          margin: 0px 5px;
+          &.be{
+            background-color: $baseColor;
+          }
+        }
+      }
+      span{
+        float: left;
+        width: 20%;
+        text-align: center;
+        color: $orange;
+      }
+    }
+  }
+}
